# master-thesis-experiments

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt
.hooks/: pre-push
master_thesis_experiments/active_learning/: base.py  entropy_diversity_sampling.py  entropy_sampling.py  first_k_sampling.py  label_spreading.py  random_sampling.py  random_sampling_v2.py  random_sampling_v3.py  uncertainty_entropy.py  uncertainty_sampling.py  uncertainty_spreading.py  weighted_sampling.py
master_thesis_experiments/adaptation/: density_estimation.py
master_thesis_experiments/handlers/: importance_weights.py  joint_probability.py  weighting_handler.py
master_thesis_experiments/importance/: simple.py
master_thesis_experiments/main/: synth_classification_simulation.py  synth_classification_simulation_v2.py  synth_classification_simulation_v3.py
master_thesis_experiments/notebooks/: classifiers_evaluation.ipynb  synth_classification_simulation.ipynb
master_thesis_experiments/notebooks/classification/: accuracy_evaluation.ipynb  conditional_prob_evaluation.ipynb  evaluations.ipynb  full_run.ipynb  plot_concepts.ipynb  prova.ipynb  sensibility_analysis.ipynb  weights_evaluations.ipynb
master_thesis_experiments/simulator_toolbox/: enums.py  utils.py
master_thesis_experiments/simulator_toolbox/data_provider/: base.py
master_thesis_experiments/simulator_toolbox/generator/: base.py  custom_generator.py  synth_classification_generator.py  synth_classification_generator_decision_boundary.py  synth_classification_generator_v2.py
(+2 files in other folders)
