[tool.poetry]
name = "master-thesis-experiments"
version = "0.1.0"
description = ""
authors = ["MassimilianoArca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "master_thesis_experiments"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

