[tool.poetry]
name = "master-thesis-experiments"
version = "0.1.0"
description = ""
authors = ["MassimilianoArca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "master_thesis_experiments"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
pandas = "^1.5.3"
scipy = "^1.10.1"
river = "^0.15.0"
scikit-learn = "^1.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

